--- a/creator.html
+++ b/creator.html
@@ -3,18 +3,10 @@
 <head>
  <style>
   #image {
-            position: relative;
-            padding: 40px;
-            text-align: center;
-            max-width: 500px;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 1s ease-out, transform 1s ease-out;
-
-        #image.visible {
+  opacity: 0;
+  transition: opacity 1s ease-in; /* Transitions opacity over 1 second with ease-in timing */
+}
+       #image.visible {
             opacity: 1;
             transform: translateY(0);
         }</style>
