--- a/creator.html
+++ b/creator.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Sheppards&display=swap" rel="stylesheet">
  <style>
   #image {
   opacity: 0;
